gatewayapi/main-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway-system
spec:
  gatewayClassName: eg

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.lab"

      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.lab"

      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: k8s-lab-tls

      allowedRoutes:
        namespaces:
          from: All
